--- a/README.org
+++ b/README.org
@@ -11,7 +11,8 @@ src="https://cloud.githubusercontent.com/assets/2991242/22413672/a3357722-e66e-1
 
 * TODO
 
-  - [ ] Option to make --png and --svg write to stdout
+  - [ ] Make --png and --svg write a single image to stdout
+    - [ ] Update gendot to return a string
   - [ ] GitHub Action that runs tests
   - [ ] Ability to create graphs with simple labels like A, B, C, D (instead of
     git commit SHAs)
